# notifier-service

./: .env  Cargo.toml  Makefile  README.md
docker/: Dockerfile  docker-compose.yaml
src/: main.rs
src/delivery/http/: controller.rs
src/models/: notification.rs
src/services/: manager.rs  mod.rs  notification_service.rs  services.rs
