[package]
name = "notifier-service"
version = "0.1.0"
authors = ["vizitiuRoman <vizitiuroman.md@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-web = "0.3.7"
tokio = "1.2.0"
serde = "1.0.123"
serde_json = "1.0.64"
rayon = "1.5.0"
dotenv = "0.15.0"
curl = "0.4.34"
log = "0.4.14"
env_logger = "0.8.3"
